testdata/e2e/examples/basic/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: quick-start
data:
  foo: bar
